--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -8,17 +8,17 @@
 @import "./cores/buttons";
 @import "./cores/card";
 
-// sections
-@import "./sections/MainMenuSection";
-@import "./sections/ProductGridSection";
-@import "./sections/FooterSection";
-@import "./sections/BreadcrumbSection";
-@import "./sections/MapSection";
-@import "./sections/ContactFormSection";
-@import "./sections/ShowCaseSection";
-@import "./sections/BannersSection";
-@import "./sections/CategoryRightSection";
-@import "./sections/CompanyServiceSection";
-@import "./sections/ShoppingCartSection";
+// parts
+@import "./parts/MainMenuPart";
+@import "./parts/ProductGridPart";
+@import "./parts/FooterPart";
+@import "./parts/BreadcrumbPart";
+@import "./parts/MapPart";
+@import "./parts/ContactFormPart";
+@import "./parts/ShowCasePart";
+@import "./parts/BannersPart";
+@import "./parts/CategoryRightPart";
+@import "./parts/CompanyServicePart";
+@import "./parts/ShoppingCartPart";
 
 
