--- a/src/assets/scss/parts/_CompanyServicePart.scss
+++ b/src/assets/scss/parts/_CompanyServicePart.scss
@@ -1,22 +1,22 @@
 .service-contacts{
     display: flex;
     justify-content: space-between;
+    margin-top: 59px;
     align-items: center;
-    margin-top: 60px;
-    max-width: 1110px;
+    max-width: 1109px;
 
     .service-info {
         
 
         .icon-button {
-            margin-left: 40%;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            border: none;
+            margin-left: 39%;
+            width: 49px;
+            height: 49px;
+            border: 1px;
+            border-radius: 49%;
             background-color: $color-white;
-            box-shadow: 0 0 5px 5px $color-shadow;
-            margin-top: 10px;
+            box-shadow: 0 0 4px 4px $color-shadow;
+            margin-top: 9px;
 
             &:hover {
                 background-color: $color-theme;
@@ -24,21 +24,22 @@
         }
 
         h1 {
-            font-size: 20px;
-            font-weight: bold;
             text-align: center;
-            margin-top: 30px;
+            font-size: 19px;
+            font-weight: bold;
+            margin-top: 29px;
         }
         p {
             text-align: center;
             margin-top: 30px;
-            margin-bottom: 70px;
+            margin-bottom: 65px;
         }
     }
 
 }
-@media screen and (max-width: 567px ){
+@media screen and (max-width: 569px ){
     .service-contacts{
+
         display: block;
     }
 }
